# macid

./: Cargo.toml  README.md  test.txt
src/: errors.rs  lib.rs  linux.rs  utils.rs  windows.rs
