[package]
# macid
name = "machineid"
version = "1.1.1"
edition = '2021' 
description = "build a unique machine id"  
license = "MIT"   
authors = ["yaobos@outlook.com"]  
repository = "https://github.com/yaobo-lab/macid.git"

[dependencies]
sysinfo = { version = "0.37.1", default-features = false, features = [
    "system",
] }
whoami = "1.6.1"
serde = { version = "1.0.228", features = ["derive"] }
hex = "0.4.3"
uuid = { version = "1.18.1", features = ["v4"] }
hmac = "0.12.1"
md-5 = "0.10.1"
log = "0.4.28"
netdev = { version = "0.37.3", features = ["serde"] }
anyhow = "1.0.100"


[target.'cfg(windows)'.dependencies]
winreg = "0.55.0"
wmi = "0.17.2"

[target.'cfg(unix)'.dependencies]
serde_json = "1.0.145"


[dev-dependencies]
toolkit-rs = "1.0.15"